--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -28,10 +28,10 @@ server {
     add_header "X-UA-Compatible" "IE=Edge,chrome=1";
 
     # Try to serve static files
-    try_files $uri $uri/ @flask;
+    try_files $uri $uri/ /shorten/;
 
     # If there is no static file, send it to flask
-    location @flask {
+    location /shorten/ {
         proxy_pass http://gunicorn-shorten;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
