added redirect for 404 pages back home

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -28,7 +28,7 @@ server {
     add_header "X-UA-Compatible" "IE=Edge,chrome=1";
 
     # Try to serve static files
-    try_files $uri $uri/ /shorten/;
+    try_files $uri $uri/ =404;
 
     # If there is no static file, send it to flask
     location /shorten/ {
@@ -38,15 +38,10 @@ server {
         add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
     }
 
-    error_page 500 502 503 504 /500.html;
-    error_page 404 /404.html;
+    error_page 404 /404/;
 
-    location = /500.html {
-        root /home/lucas/www/shorten.tv/shorten-env/shorten.tv/static;
-    }
-
-    location = /404.html {
-        root /home/lucas/www/shorten.tv/shorten-env/shorten.tv/static;
+    location = /404/ {
+        rewrite ^ http://www.shorten.tv permanent;
     }
 }
 
